style.css
:root {
  --white: #fffbfb;
  --grey: #f0eef1;
  --black: #050505;
  --red: #ff7070;
  --light-green: #9fff9c;
  --light-red: #ff9c9c;
  --border-radius: 8px;
  --spacing-xs: 5px;
  --spacing-sm: 10px;
  --spacing-md: 15px;
  --spacing-lg: 20px;
  --spacing-xl: 40px;
  --container-width: 1200px;
  --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}



/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*, *::before, *::after {
    box-sizing: border-box;
  }
  * {
    margin: 0;
  }
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
  }
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  input, button, textarea, select {
    font: inherit;
  }
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  #root, #__next {
    isolation: isolate;
  }

  body {
    background-color: var(--grey);
    color: var(--black);
    font-size: 18px;
    font-weight: 500;
    word-wrap: break-word;
    /* footer support */
    margin-bottom: 100px;
  }

/*full bleed format*/
.wrapper {
  display: grid;
  grid-template-columns:
    1fr
    min(1200px, 100%)
    1fr;
}
.wrapper > * {
  grid-column: 2;

}
.full-bleed {
  width: 100%;
  grid-column: 1 / 4;
}

.noDisplay{
  display: none;
}



/*HEADER*/

.head-container{
    font-style:oblique;
    display:flex;
    justify-content: space-between;
    align-items: center;
    padding:1.5rem;
    font-size: 20px;
    box-shadow: 0 0.5rem 0.5rem #0c0c0c21, 6px 5px 12px rgba(184, 184, 184, 0.418);
}



/*UTIL*/

button,
input {
  border: none;
  border-radius: 3px;
  background-color: rgb(190, 190, 190);
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  cursor: pointer;
  outline: none;
}

input::placeholder { /* Targets all placeholder text */
  text-align: center;
}

form{

display:flex;
flex-direction: column;
gap:20px;
}

form > *{
  font-weight: 600;
  font-family: 'Courier New', Courier, monospace;
  font-size: 24px;
 
}


.btn-sample{
  color: rgb(117, 117, 117);
  font-size: 15px;
  font-weight: 400;
  border: solid 2px rgb(194, 176, 176);
  background-color:   var(--grey);
}


/*MAIN*/
.main-container{
  padding-left:5rem;
  padding-right:2rem;
  text-align: center;
  padding: 1rem;
}

.books-grid{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: var(--spacing-xl);
    margin-top: var(--spacing-xl);
    min-height:100px;
}

.book-card{
  font-family: Arial, Helvetica, sans-serif;
  background-color: white;
  border-radius: 10px;
  display: flex;
  flex-direction:column;
  justify-content: space-around;
  min-height:150px;

  box-shadow: 0 0.5rem 0.5rem #0c0c0c21, 6px 5px 12px rgba(184, 184, 184, 0.418);
}

.card-btns{
  display: flex;
  justify-content: center;
  gap: 4px;
}

dialog::backdrop {
  background-color: hsla(234, 28%, 34%, 0.596);
}
dialog{
  position: absolute;
  top: 50%;
  left: 50%;
  translate: -50% -50%;
  z-index: 10;
  margin-top: 10px;
  background: rgb(255, 255, 255);
  border: none;
  border-radius: 0.5rem;
}

.done{//for togfle buttons
  color:rgb(1, 48, 1);
  background-color: rgba(90, 143, 10, 0.863);
}
.btn-read{
  width:5em;
}


.noBooks{

  color: gray;
  text-align: center;
}




/* FOOTER */

.footer {
    position: absolute;
    bottom: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: var(--spacing-sm);
  }
  
  .fa-github {
    font-size: 24px;
    color: var(--black);
    transition: transform 0.3s ease-in-out;
  }
  
  .fa-github:hover {
    transform: rotate(360deg) scale(1.2);
  }
  

  

